# living-room-bot

./: .gitignore  fly.toml  pyproject.toml
src/living_room_bot/: main.py
